Tue Sep 29 00:21:05 CEST 2009  Christopher Martin  <belles@internode.on.net>

	* storage.c(c_alloc): Enable expression evaluation that includes
	symbols defined in record layouts.
	* regression/tests_pass/record_basic.s,
	regression/tests_fail/record_basic_fail.s: Added test case.
	* configure.ac: Bumped version to 1.48.

Wed May 27 20:28:55 PDT 2009  Peter Naulls  <peter@chocky.org>

	* input.c, input.h, main.c: Approximate the -PD flag to objasm
	to allow the SETx syntax to be passed on the command line.
	This is largely a hack for the benefit of ROOL source.

Mon May 11 23:17:00 UTC 2009  John-Mark Bell  <jmb@netsurf-browser.org>

	* input.c(inputVarSub): Permit verbatim '$' in string literals.

Mon Feb 23 15:40:00 UTC 2009  John-Mark Bell  <jmb@netsurf-browser.org>

	* eval.c(evalUnop): Stub implementations of :fload: and :fexec:. These
	aren't particularly useful, but are better than bailing out.
	* lexAcorn.c(lexAcornUnop): Fix decode of :fexec:.
	(lexAcornPrim): Add {ASASM}, so existing code can work around our
	deficiencies (specifically ?A and ASSERT using late labels in the code
	I'm currently assembling). Comments about this welcome.

Mon Feb 23 13:37:00 UTC 2009  John-Mark Bell  <jmb@netsurf-browser.org>

	* m_cpumem.c: Revert r3747 -- LDR|STR Rd,[Rm,#xxx] may have xxx as a
	register-relative expression if xxx is a field in a map.
	* regression/{Makefile,ldr_from_addr.s}: Test data for the above.

Mon Feb 23 12:15:00 UTC 2009  John-Mark Bell  <jmb@netsurf-browser.org>

	* decode.c, commands.[ch]: Add support for the INFO directive and the
	! shorthand.
	* regression/{info.s,Makefile}: Test case for the above.

Mon Feb 23 11:35:00 UTC 2009  John-Mark Bell  <jmb@netsurf-browser.org>

	* m_cpuctrl.c(m_adr): Permit use of ADR(L) to obtain address of fields
	in register-based maps.
	* regression/register_based_map.s: Expand test data to cover the
	above.

Mon Feb 23 04:54:00 UTC 2009  John-Mark Bell  <jmb@netsurf-browser.org>
